# PolymarketIntelligenceLab-

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.ai/: ._PROJECT_STATUS.md  AI_INSTRUCTIONS.md  PROJECT_STATUS.md
.ai/modules/: features.md  ingestion.md  llm_and_ops.md  models.md
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/components/: MarketModal.tsx  Navbar.tsx
scripts/: crontab_example.txt  run_mlops.sh  setup_vps.sh  start_dashboard.sh
src/api/: main.py
src/features/: builder.py  nlp_sentiment.py  run_features.py
src/ingestion/: news_client.py  polymarket_client.py  resolutions_client.py  run_ingestion.py
src/models/: run_models.py  train_supervised.py
src/models/baselines/: anomaly_detector.py  opportunity_ranker.py
src/models/llm/: research_generator.py
src/storage/: bronze.py  mlops_dataset.py  silver.py
