[tool.poetry]
name = "polymarket-intelligence-lab"
version = "0.1.0"
description = "An end-to-end research and intelligence platform for prediction markets."
authors = ["Nicolas Becas Azagra"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
pandas = "^2.2.0"
polars = "^0.20.0"
duckdb = "^1.0.0"
pyarrow = "^16.0.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
torch = "^2.3.0"
mlflow = "^2.12.0"
python-dotenv = "^1.0.0"
shap = "^0.45.0"
openai = "^1.25.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.0"
ruff = "^0.4.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
